--- a/translations/tengyur/placeholders/052-045_toh2304-lta_ba_mdor_bsdus_pa.xml
+++ b/translations/tengyur/placeholders/052-045_toh2304-lta_ba_mdor_bsdus_pa.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" xml:id="UT23703-052-045-2">Casey Kemp</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT23703-052-045"/>
                 <date/>
             </publicationStmt>
@@ -50,6 +50,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT23703-052-045-9">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-16T13:20:27.984Z" type="translation-status" status="2.h" xml:id="UT23703-052-045-10">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-16T13:20:27.984Z" type="text-version" status="0.0.4" xml:id="UT23703-052-045-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
