--- a/translations/kangyur/placeholders/087-010_toh505-the_incantation_of_vaiduryaprabha.xml
+++ b/translations/kangyur/placeholders/087-010_toh505-the_incantation_of_vaiduryaprabha.xml
@@ -17,11 +17,11 @@
                 <sponsor xml:id="UT22084-087-010-3">May, George, Likai and Lillian Gu</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.17 <date>2024</date>
+                <edition>v 0.0.18 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-087-010"/>
                 <date/>
             </publicationStmt>
@@ -117,6 +117,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-12T07:37:42.343Z" type="text-version" status="0.0.17" xml:id="UT22084-087-010-42">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-17T12:36:19.18Z" type="translation-status" status="2.a" xml:id="UT22084-087-010-43">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-17T12:36:19.18Z" type="text-version" status="0.0.18" xml:id="UT22084-087-010-44">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
