--- a/translations/kangyur/placeholders/088-027_toh533,860-the_incantation_the_essence_of_sakyamuni.xml
+++ b/translations/kangyur/placeholders/088-027_toh533,860-the_incantation_the_essence_of_sakyamuni.xml
@@ -12,11 +12,11 @@
                 <author role="translatorEng" xml:id="UT22084-088-027-2">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-088-027"/>
                 <date/>
             </publicationStmt>
@@ -62,6 +62,12 @@
                 </change>
                 <change who="#sameer" when="2024-03-31T08:04:01.672Z" type="text-version" status="0.0.5" xml:id="UT22084-088-027-9">
                     <desc>Updated vol. 88 and 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-17T12:59:30.729Z" type="translation-status" status="2.g" xml:id="UT22084-088-027-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-17T12:59:30.729Z" type="text-version" status="0.0.6" xml:id="UT22084-088-027-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
