--- a/translations/kangyur/placeholders/088-030_toh536,869-recollecting_the_common_essence_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/088-030_toh536,869-recollecting_the_common_essence_of_the_tathagatas.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" xml:id="UT22084-088-030-2">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-088-030"/>
                 <date/>
             </publicationStmt>
@@ -63,6 +63,12 @@
                 </change>
                 <change who="#sameer" when="2024-04-01T09:17:23.789Z" type="text-version" status="0.0.5" xml:id="UT22084-088-030-9">
                     <desc>Updated vol. 88 and 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-17T13:01:33.9Z" type="translation-status" status="2.g" xml:id="UT22084-088-030-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-17T13:01:33.9Z" type="text-version" status="0.0.6" xml:id="UT22084-088-030-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
