--- a/translations/kangyur/placeholders/088-032_toh538,1068-the_incantation_the_cloud_of_offerings.xml
+++ b/translations/kangyur/placeholders/088-032_toh538,1068-the_incantation_the_cloud_of_offerings.xml
@@ -13,12 +13,12 @@
                 <author role="translatorEng" xml:id="UT22084-088-032-2">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-088-032"/>
                 <date/>
             </publicationStmt>
@@ -67,6 +67,12 @@
                 </change>
                 <change who="#sameer" when="2024-04-01T09:30:37.406Z" type="text-version" status="0.0.6" xml:id="UT22084-088-032-10">
                     <desc>Updated vol. 88 and 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-17T13:03:31.409Z" type="translation-status" status="2.g" xml:id="UT22084-088-032-11">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-17T13:03:31.409Z" type="text-version" status="0.0.7" xml:id="UT22084-088-032-12">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
