--- a/translations/kangyur/placeholders/071-013_toh299-sutra_on_times_for_the_gong.xml
+++ b/translations/kangyur/placeholders/071-013_toh299-sutra_on_times_for_the_gong.xml
@@ -11,13 +11,14 @@
                 <author role="translatorEng" xml:id="UT22084-071-013-2">Lowell Cook</author>
                 <editor role="projectEditor" xml:id="UT22084-071-013-13">George FitzHerbert</editor>
                 <editor role="copyEditor" xml:id="UT22084-071-013-22">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-071-013-32">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-071-013"/>
                 <date/>
             </publicationStmt>
@@ -86,6 +87,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-18T14:32:22.966Z" type="text-version" status="0.0.11" xml:id="UT22084-071-013-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-16T14:27:55.663Z" type="text-version" status="0.0.12" xml:id="UT22084-071-013-33">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-18T08:20:52.894Z" type="translation-status" status="2.b" xml:id="UT22084-071-013-34">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-18T08:20:52.894Z" type="text-version" status="0.0.13" xml:id="UT22084-071-013-35">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
