--- a/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
+++ b/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
@@ -18,11 +18,11 @@
                 <editor role="copyEditor" xml:id="UT22084-072-019-34">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-072-019"/>
                 <date/>
             </publicationStmt>
@@ -89,6 +89,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-03-27T11:56:54.378Z" type="text-version" status="0.0.11" xml:id="UT22084-072-019-35">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-19T11:52:12.246Z" type="translation-status" status="2.d" xml:id="UT22084-072-019-36">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-19T11:52:12.246Z" type="text-version" status="0.0.12" xml:id="UT22084-072-019-37">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
