--- a/translations/kangyur/placeholders/088-027_toh533,860-the_incantation_the_essence_of_sakyamuni.xml
+++ b/translations/kangyur/placeholders/088-027_toh533,860-the_incantation_the_essence_of_sakyamuni.xml
@@ -8,15 +8,16 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">shAkya thub pa'i snying po'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shAkya thub pa'i snying po'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-088-027-1"/>
+                <author role="translatorMain" xml:id="UT22084-088-027-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-088-027-2">Bruno Galasek-Hul</author>
+                <editor role="projectEditor" xml:id="UT22084-088-027-14">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-088-027"/>
                 <date/>
             </publicationStmt>
@@ -67,6 +68,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-17T12:59:30.729Z" type="text-version" status="0.0.6" xml:id="UT22084-088-027-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-17T13:00:02.53Z" type="text-version" status="0.0.7" xml:id="UT22084-088-027-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-19T11:57:57.774Z" type="translation-status" status="2.f" xml:id="UT22084-088-027-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-19T11:57:57.774Z" type="text-version" status="0.0.8" xml:id="UT22084-088-027-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
