--- a/translations/kangyur/placeholders/061-008_toh188-the_sutra_of_the_prophecy_by_dipamkara.xml
+++ b/translations/kangyur/placeholders/061-008_toh188-the_sutra_of_the_prophecy_by_dipamkara.xml
@@ -9,20 +9,21 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">mar me mdzad kyis lung bstan pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryadīpaṃkaravyākaraṇa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mar me mdzad kyis lung bstan pa zhe bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" xml:id="UT22084-061-008-1"/>
+                <author role="translatorMain" xml:id="UT22084-061-008-1">Sakya Pandita Translation Group</author>
                 <consultant role="dharmaMaster" xml:id="UT22084-061-008-2">Ven. Khenpo Kalsang Gyaltsen</consultant>
                 <consultant role="projectManager" xml:id="UT22084-061-008-3">Rev. Dr. Ani Kunga Chodron</consultant>
                 <author role="translatorEng" xml:id="UT22084-061-008-4">Ven. Khenpo Kalsang Gyaltsen</author>
                 <author role="translatorEng" xml:id="UT22084-061-008-5">Rev. Dr. Ani Kunga Chodron</author>
                 <author role="translatorEng" xml:id="UT22084-061-008-6">Laura Goetz</author>
+                <editor role="projectEditor" xml:id="UT22084-061-008-21">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-061-008"/>
                 <date/>
             </publicationStmt>
@@ -61,6 +62,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-16T14:24:35.484Z" type="text-version" status="0.0.6" xml:id="UT22084-061-008-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-16T14:25:09.744Z" type="text-version" status="0.0.7" xml:id="UT22084-061-008-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-22T09:24:13.89Z" type="translation-status" status="2.f" xml:id="UT22084-061-008-23">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-22T09:24:13.89Z" type="text-version" status="0.0.8" xml:id="UT22084-061-008-24">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
