--- a/translations/kangyur/translations/059-013_toh170-the_sutra_of_the_questions_of_the_brahmani_srimati.xml
+++ b/translations/kangyur/translations/059-013_toh170-the_sutra_of_the_questions_of_the_brahmani_srimati.xml
@@ -38,7 +38,7 @@
                                         Rich</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2024</date>
+                <edition>v 1.1.1 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -193,6 +193,9 @@
                 <change who="#sameer" when="2024-04-17T05:16:23.966Z" type="text-version" status="1.0.3" xml:id="UT22084-059-013-191">
                     <desc>Included in App v 3.12</desc>
                 </change>
+                <change who="#john" when="2024-04-22T10:04:43.378Z" type="text-version" status="1.1.1" xml:id="UT22084-059-013-1132">
+                    <desc>A few edits and one additional glossary entry.</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
@@ -272,8 +275,8 @@
                                                 discourse on emptiness that touches on the
                                                 distinction between ultimate and conventional truth.
                                                 The sūtra further describes the teachings given by
-                                                the Buddha in terms of a number of different Dharma
-                                                wheels.</p>
+                                                the Buddha in terms of the different ways in which 
+                                                the wheel of Dharma can be characterized.</p>
                                         <milestone unit="chunk" xml:id="UT22084-059-013-56"/>
                                         <p tid="11">This is one of several Mahāyāna sūtras in the
                                                 Kangyur in which the Buddha’s main interlocutor is a
@@ -338,7 +341,8 @@
                                                 early Buddhist Central Asia since a long Sanskrit
                                                 quotation from it can be found in Gupta Brahmi
                                                 script on a Bactrian copper scroll inscription that
-                                                probably dates to the fifth century <hi rend="small-caps">ce</hi>. This scroll, the <title xml:lang="Sa-Ltn">Śrīmatī­brāhmaṇī­pari­pṛcchā</title>, as
+                                                probably dates to the fifth century <hi rend="small-caps">ce</hi>. 
+                                                This scroll, the <title xml:lang="Sa-Ltn">Śrīmatī­brāhmaṇī­pari­pṛcchā</title>, as
                                                 identified by Melzer (2006), is currently held in
                                                 the Schøyen Collection, Oslo. </p>
                                         <milestone unit="chunk" xml:id="UT22084-059-013-58"/>
@@ -438,7 +442,7 @@
                                                 serene, peaceful, and well guarded. His senses were
                                                 tamed and, without a trace of wickedness, he glowed
                                                 with a fine complexion. Still and clear like a lake,
-                                                elevated and unshakable like a golden pillar, he was
+                                                elevated and unshakable like a golden offering post, he was
                                                 unmoving, and due to the splendor of his attainment,
                                                 he blazed, shone, and glowed with
                                                 brilliance.<!--module ends--> Seeing this, Śrīmatī
@@ -574,8 +578,12 @@
                                                 sandalwood powder, sprinkled it on the Blessed One’s
                                                 feet, and said, <ref cRef="F.309.b" type="folio" xml:id="UT22084-059-013-163"/> “Blessed One, by
                                                 this root of virtue, may I too in the future turn
-                                                these wheels of Dharma, from the wheel of emptiness
-                                                to the wheel of the absence of characteristics.”</p>
+                                                the wheel of Dharma in that way—the wheel of emptiness, the wheel of
+                                                emancipation, the wheel of certainty, the wheel of
+                                                inconceivability, the wheel unturned, the wheel of
+                                                the incomparable, the wheel just as it is, the wheel
+                                                of birthlessness, the wheel of the unreal, and the 
+                                                wheel of the absence of characteristics.”</p>
                                         <milestone unit="chunk" xml:id="UT22084-059-013-90"/>
                                         <p tid="42">At this, the Blessed One smiled.
                                                 <!--module starts-->As is the nature of the blessed
@@ -975,6 +983,14 @@
                                                   <term xml:lang="bo" n="1">ཉན་ཐོས།</term>
                                                   <term status="verified" xml:lang="Sa-Ltn"/>
                                                 </gloss>
+                    </item>
+                                        <item>
+                        <gloss type="term" xml:id="UT22084-059-013-1131">
+                                                <term type="translationMain">offering post</term>
+                                                <term status="verified" xml:lang="Bo-Ltn" n="1">mchod sdong </term>
+                                                <term xml:lang="bo" n="1">མཆོད་སྡོང་།</term>
+                                                <term status="verified" xml:lang="Sa-Ltn">yūpa</term>
+                                        </gloss>
                     </item>
                                         <item>
                         <gloss type="person" xml:id="UT22084-059-013-133">
