--- a/translations/kangyur/translations/088-035_toh540,1078-the_incantation_of_surupa.xml
+++ b/translations/kangyur/translations/088-035_toh540,1078-the_incantation_of_surupa.xml
@@ -20,7 +20,7 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-088-035-46">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -159,6 +159,9 @@
                 <change who="#andre" when="2024-03-02T18:46:06.02Z" type="text-version" status="1.0.1" xml:id="UT22084-088-035-117">
                     <desc>Glossary integration revised, activated in CG</desc>
                 </change>
+                <change who="#john" when="2024-04-22T10:49:59.826Z" type="text-version" status="1.0.2" xml:id="UT22084-088-035-118">
+                    <desc>A few minor edits</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -243,7 +246,7 @@
                         Tibetan masters maintained this tradition. See, for example, the work of
                         Butön (bu ston rin chen grub, 1290–1364), <title xml:lang="en">The Easy Path
                             Leading to Omniscience</title> (<title xml:lang="Bo-Ltn">rnam mkhyen du
-                                bgrod pa’i bde lam</title>).<ref rend="pending" target="https://read.84000.co/translation/toh5179.html"/> These
+                                bgrod pa’i bde lam</title>).<!--<ref rend="pending" target="https://read.84000.co/translation/toh5179.html"/>--> These
                         manuals describe the ritual as a <foreign xml:lang="Sa-Ltn" type="quote">bali</foreign> offering to be performed by bodhisattvas on the early
                         stages of the path. </p>
                     <milestone unit="chunk" xml:id="UT22084-088-035-60"/>
@@ -336,14 +339,14 @@
                             caused by a breach of morality, in order to enter and possess a being.
                             It is conceivable that one of the two Tibetan elements was originally a
                             gloss of the other.</note> I hereby donate food to pretas residing in
-                        every world system!” <ref cRef="F.84.b" key="toh540" work="W22084"/> <ref key="toh540" cRef="F.101.b" type="folio" xml:id="UT22084-088-035-106"/> One should perform this on an empty stomach.
-                        In this way, the pretas will each be given a bushel of rice. </p>
+                        every world system!” <ref cRef="F.84.b" key="toh540" work="W22084"/> <ref key="toh540" cRef="F.101.b" type="folio" xml:id="UT22084-088-035-106"/> One should make the donation before one has eaten.
+                        The outcome is that the pretas will each be given a bushel of rice. </p>
                     <milestone unit="chunk" xml:id="UT22084-088-035-71"/>
                     <p tid="22">If one performs it in this way, in each and every rebirth one will
                         never be feeble or poor. Rather, one will possess great might, beauty, a
                         countenance lovely to behold, much wealth, and great enjoyments. One will
                         have a long lifespan, freedom from illness, and will swiftly attain
-                        unsurpassed, perfect awakening. When one has died, one will be reborn in the
+                        unsurpassed, perfect awakening. After death, one will be reborn in the
                         realm of Sukhāvatī. </p>
                     <milestone unit="chunk" xml:id="UT22084-088-035-72"/>
                     <trailer tid="23">Here ends “<title xml:lang="en">The Dhāraṇī
