--- a/translations/kangyur/translations/061-006_toh186_miracle_of_attaining_the_buddhas_powers.xml
+++ b/translations/kangyur/translations/061-006_toh186_miracle_of_attaining_the_buddhas_powers.xml
@@ -26,7 +26,7 @@
                 <consultant role="projectManager" xml:id="UT22084-061-006-306">Gregory Forgues</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.33.31 <date>2023</date>
+                <edition>v 1.33.32 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -180,6 +180,9 @@
                 <change who="#martina-cotter" when="2023-12-04T09:41:15.336Z" type="text-version" status="1.33.31" xml:id="UT22084-061-006-347">
                     <desc>Added pending links.</desc>
                 </change>
+                <change who="#celso" when="2024-04-22T14:07:23.549Z" type="text-version" status="1.33.32" xml:id="UT22084-061-006-351">
+                    <desc>Activated pending links</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -263,8 +266,7 @@
                         illusions, the extraordinary activities of a tathāgata, such as teaching and leading beings to awakening, are not limited by
                         time and space. His teaching remains even if he manifested the extinction of suffering eons ago. As an object of veneration,
                         he is a means to reach awakening by accumulating merit. His purpose and meaning are not constrained by notions of his being
-                        present or absent. The same idea occurs in a sūtra found in the Ratnakūṭa, <title xml:lang="en">The Prophecy for the Magician
-                            Bhadra</title> (Toh. 65)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh65.html"/>, in which the Tathāgata displays similar miracles (Chang 1983: 4–13) and in which it is stated that the Buddha can perform
+                        present or absent. The same idea occurs in a sūtra found in the Ratnakūṭa, <title xml:lang="en">The Prophecy for Bhadra the Illusionist</title> (Toh. 65),<note place="end" xml:id="UT22084-061-006-348">Kīrtimukha Translation Group, trans., <title xml:lang="en">The Prophecy for Bhadra the Illusionist</title> (<title xml:lang="Sa-Ltn">Bhadra­māyākāravyākaraṇa</title>, Toh 65), <ptr target="#UT22084-043-002-98"/>-<ptr target="#UT22084-043-002-239"/>.</note> in which the Tathāgata displays similar miracles <!--(Chang 1983: 4–13)--> and in which it is stated that the Buddha can perform
                         magic because he knows that all phenomena are illusory. Action (<foreign type="term" xml:lang="Sa-Ltn">karma</foreign>) is
                         explained as being the great conjurer that magically creates beings and material objects. Thus, the basis of the Tathāgata’s
                         supernatural powers is considered to be his realization that all phenomena are like magic and illusions. </p>
@@ -319,7 +321,9 @@
                                 <ref target="http://read.84000.co/translation/toh56.html">The Collected Teachings on the Bodhisatva</ref>
                             </title>, Toh 56 (84000: Translating the Words of the 
                                 Buddha, 2023).</note> <title xml:lang="Sa-Ltn">Bhadra­māyākāra­vyākaraṇa</title> (Toh
-                            65)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh65.html"/>, <title xml:lang="Sa-Ltn">Mahā­pratihārya­nirdeśa</title> (Toh 66)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh66.html"/>, <title xml:lang="Sa-Ltn">Maitreya­mahā­siṃha­nāda</title> (Toh
+                        65),<note place="end" xml:id="UT22084-061-006-349">Kīrtimukha Translation Group, trans., <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh65.html">The Prophecy for Bhadra the Illusionist</ref>
+                            </title>, Toh 65 (2024).</note> <title xml:lang="Sa-Ltn">Mahā­pratihārya­nirdeśa</title> (Toh 66)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh66.html"/>, <title xml:lang="Sa-Ltn">Maitreya­mahā­siṃha­nāda</title> (Toh
                         67),<note place="end" xml:id="UT22084-061-006-294">See Karen Liljenberg and Ulrich Pagel. trans. <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh67.html">The Great Lion’s Roar of Maitreya</ref>
                             </title>, Toh 67 (2023).</note> and <title xml:lang="Sa-Ltn">Acintya­buddha­viśaya­nirdeśa</title> (Toh 79)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh79.html"/>; and twenty-eight sūtras from the <title xml:lang="Bo-Ltn">mdo
@@ -1336,6 +1340,10 @@
                         </ref>
                         </title> 
                         (Toh 47). 84000: Translating the Words of the Buddha, 2023.</bibl>
+                    <bibl xml:id="UT22084-061-006-350">Kīrtimukha Translation Group, trans. <title xml:lang="en">
+                        <ref target="https://read.84000.co/translation/toh65.html">The Prophecy for Bhadra the Illusionist</ref>
+                    </title> (<title xml:lang="Sa-Ltn">Bhadra­māyākara­vyākaraṇa­sūtra</title>, Toh 65). 84000: Translating the Words of the
+                        Buddha, 2024.</bibl>
                     <bibl xml:id="UT22084-061-006-121">La Vallée Poussin, Louis de, trans. <title xml:lang="en">Abhidharmakośabhāṣya of
                             Vasubandhu</title>. Berkeley: Asian Humanities Press, 1988–90.</bibl>
                     <bibl xml:id="UT22084-061-006-122">Lamotte, Etienne, trans. <title xml:lang="en">Śūraṃgamasamādhisūtra: The Concentration of
@@ -1783,7 +1791,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">akṣobhya</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mi ’khrugs pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">མི་འཁྲུགས་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>“Unmovable One.”</p>
                             </note>
                         </gloss>
