--- a/translations/kangyur/translations/044-004_toh84-the_sutra_of_the_girl_vimalasraddhas_questions.xml
+++ b/translations/kangyur/translations/044-004_toh84-the_sutra_of_the_girl_vimalasraddhas_questions.xml
@@ -35,7 +35,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-044-004-382">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.13 <date>2023</date>
+                <edition>v 1.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -220,6 +220,9 @@
                 <change who="#martina-cotter" when="2023-10-23T20:50:25.926Z" type="text-version" status="1.0.13" xml:id="UT22084-044-004-431">
                     <desc>updated ellipsis.</desc>
                 </change>
+                <change who="#celso" when="2024-04-22T14:45:05.006Z" type="text-version" status="1.0.14" xml:id="UT22084-044-004-434">
+                    <desc>Activated pending links</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -336,9 +339,9 @@
                                     Prophecy of Kṣemavatī</ref>
                             </title>, Toh 192 (84000: Translating
                             the Words of the Buddha, 2022).</note> Less privileged female
-                        bodhisattvas include laywomen, the main interlocutors in the <title xml:lang="Sa-Ltn">
-                            <ref rend="pending" target="https://read.84000.co/translation/toh75.html">Gaṅgottarā­paripṛcchā</ref>
-                        </title> (Toh 75), the <title xml:lang="Sa-Ltn">Strīvivarta­vyākaraṇa</title> (Toh 190),<note place="end" xml:id="UT22084-044-004-367">See Dharmachakra Translation
+                        bodhisattvas include laywomen, the main interlocutors in the <title xml:lang="Sa-Ltn">Gaṅgottarā­paripṛcchā</title> (Toh 75),<note place="end" xml:id="UT22084-044-004-432">See 84000 Translation Team, trans., <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh75.html">The Questions of Gaṅgottarā</ref>
+                            </title> (Toh 75), 2024.</note> the <title xml:lang="Sa-Ltn">Strīvivarta­vyākaraṇa</title> (Toh 190),<note place="end" xml:id="UT22084-044-004-367">See Dharmachakra Translation
                             Committee, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh190.html">The
                                     Prophecy Concerning Strīvivarta</ref>
@@ -1812,6 +1815,12 @@
                             Nikāya</title>. Translated by Bhikkhu Bodhi. Boston: Wisdom Publications, 2012.</bibl>
                     <bibl xml:id="UT22084-044-004-360">Anālayo, Bhikkhu. <title xml:lang="en">Superiority Conceit in Buddhist Traditions: A Historical
                             Perspective</title>. Somerville, MA: Wisdom Publications, 2021.</bibl>-->
+                    
+                    <bibl xml:id="UT22084-044-004-433">84000 Translation Team, trans. <title xml:lang="en">
+                        <ref target="https://read.84000.co/translation/toh75.html">The Sūtra of Gaṅgottara’s Questions</ref>
+                    </title> (<title xml:lang="Sa-Ltn">Gaṅgottara­paripṛcchā­sūtra</title>, Toh 75). 84000: Translating the Words of the Buddha,
+                        2024.</bibl>
+                    
                     <bibl xml:id="UT22084-044-004-369">Braarvig, Jens Erland, trans. <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh96.html">The
                                 Miraculous Play of Mañjuśrī</ref>
@@ -2028,7 +2037,7 @@
                                 ’dzin</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཏིང་ངེ་འཛིན།</term>
                             <term xml:lang="zh" type="attestedSource">定/三摩地</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A synonym for meditation, this refers to the state of deep
                                     meditative immersion that results from different modes of
                                     Buddhist practice.</p>
@@ -2178,7 +2187,7 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">tshad med</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཚད་མེད།</term>
                             <term xml:lang="zh" type="attestedSource">無量心</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The four immeasurables are (1) immeasurable loving-kindness, (2)
                                     immeasurable compassion, (3) immeasurable sympathetic joy, and
                                     (4) immeasurable equanimity.</p>
@@ -2208,18 +2217,16 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-044-004-300">
-                            <term type="translationMain">solitary realizers</term>
+                        <gloss xml:id="UT22084-044-004-300" type="term" mode="match">
+                            <term type="translationMain">solitary realizer</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">pratyekabuddha</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rang rgyal</term>
                             <term xml:lang="bo" type="attestedSource" n="1">རང་རྒྱལ།</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="2">rang sangs
-                                rgyas</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="2">rang sangs rgyas</term>
                             <term xml:lang="bo" type="attestedSource" n="2">རང་སངས་རྒྱས།</term>
                             <term xml:lang="zh" type="attestedSource">緣覺</term>
                             <note type="definition">
-                                <p>Those who, in times when there is no buddha, reach enlightenment
-                                    on their own, but do not teach the Dharma to others.</p>
+                                <p>Those who, in times when there is no buddha, reach enlightenment on their own, but do not teach the Dharma to others.</p>
                             </note>
                         </gloss>
                     </item>
@@ -2245,7 +2252,7 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">nyan thos</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཉན་ཐོས།</term>
                             <term xml:lang="zh" type="attestedSource">聲聞</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The disciples of the Buddha who are on the path to arhathood.</p>
                             </note>
                         </gloss>
@@ -2258,7 +2265,7 @@
                                 sems</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བྱང་ཆུབ་ཀྱི་སེམས།</term>
                             <term xml:lang="zh" type="attestedSource">菩提心</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The determination to attain unsurpassable, truly complete
                                     awakening for the sake of all sentient beings.</p>
                             </note>
@@ -2296,7 +2303,7 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">gzungs</term>
                             <term xml:lang="bo" type="attestedSource" n="1">གཟུངས།</term>
                             <term xml:lang="zh" type="attestedSource">陀羅尼/具足總持</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Here, it <term rend="ignore">means</term> the power of recalling
                                     something from memory; the ability to remember.</p>
                             </note>
@@ -2616,7 +2623,7 @@
                                 sbyin</term>
                             <term xml:lang="bo" type="attestedSource" n="1">མགོན་མེད་ཟས་སྦྱིན།</term>
                             <term xml:lang="zh" type="attestedSource">給孤獨</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A principal benefactor of the Buddha; he was the wealthy merchant
                                     who acquired Prince Jeta’s Grove, i.e., the Jetavana, and
                                     donated it to the Buddhist community.</p>
@@ -2671,7 +2678,7 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dga’ ldan</term>
                             <term xml:lang="bo" type="attestedSource" n="1">དགའ་ལྡན།</term>
                             <term xml:lang="zh" type="attestedSource">兜率天</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>One of the six heavens of the desire realm, where all future
                                     buddhas dwell prior to their awakening.</p>
                             </note>
@@ -2685,7 +2692,7 @@
                                 kyi tshal</term>
                             <term xml:lang="bo" type="attestedSource" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
                             <term xml:lang="zh" type="attestedSource">祇樹給孤獨園</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>“Prince Jeta’s Grove.” A grove near Śrāvastī that was given to
                                     the Buddha and his monks by the householder Anāthapiṇḍada. The
                                     Buddha gave many teachings there. </p>
